# MediaKraken_Deployment

./: .gitignore  .gitmodules  MediaKraken.ini  MediaKraken_Slave.ini  MediaKraken_Slave_example.ini  MediaKraken_example.ini  PyLint_Cleanup.txt  README.md  backblazeb2.conf  build_dev_environment.py  build_image_directory.py  build_trailer_directory.py  bulk_gamesdb_netfetch.py  bulk_themoviedb_netfetch.py  bulk_tvmaze_netfetch.py  db_create_update.py  db_import_metadata.py  db_update_version.py  launch_uswgi_only.sh  launch_uswgi_only_weblog.sh  main_debug.py  main_download.py  main_hardware_discover.py  main_octmote.py  main_ripper.py  main_ripper_pi.py  main_server.py  main_server_api.py  main_server_ffprobe.py  main_server_link.py  main_server_metadata_api.py  main_server_metadata_api_worker.py  main_server_metadata_api_worker_image.py  main_server_slave.py  main_server_trigger.py  main_server_weblog.py  main_theater.py  main_theater_controller.py  main_theater_qt.py  main_theater_thin.py  (+81 more)
OpenMediaKraken/: BUILD_CentOS  BUILD_Mint
art/: kraken.cdr
build_code/: .gitignore  HDHomeRun.txt  MK_File_Create.py  MK_Update.py  MK_Update_Link.py  OS_BUILD  Testing.ods  Testing.txt  Tizen.txt
cache/: .gitignore
common/: MK_Common_Backup_Crashplan.py  MK_Common_Cloud_Dropbox.py  MK_Common_Cloud_Google_Drive.py  MK_Common_Cloud_OneDrive.py  MK_Common_Emby.py  MK_Common_FFMPEG.py  MK_Common_File.py  MK_Common_Hardware.py  MK_Common_Hardware_HDHomeRun_Py.py  MK_Common_Hardware_NEST.py  MK_Common_Hardware_Roku.py  MK_Common_Hardware_Yamaha.py  MK_Common_Hash.py  MK_Common_Hash_C_Code.py  MK_Common_Image.py  MK_Common_Logging.py  MK_Common_Metadata_AniDB.py  MK_Common_Metadata_Chart_Lyrics.py  MK_Common_Metadata_FreeCovers.py  MK_Common_Metadata_Limiter.py  MK_Common_Metadata_Movie_Trailer.py  MK_Common_Metadata_MusicBrainz.py  MK_Common_Metadata_NetflixRoulette.py  MK_Common_Metadata_Pitchfork.py  MK_Common_Metadata_Rotten_Tomatoes.py  MK_Common_Metadata_TMDB.py  MK_Common_Metadata_TV_Intro.py  MK_Common_Metadata_TheLogoDB.py  MK_Common_Network_Feedgen.py  MK_Common_Network_Global_Cache.py  MK_Common_Network_IRCC.py  MK_Common_Network_IRDB.py  MK_Common_Network_ISCP.py  MK_Common_Network_SNMP.py  MK_Common_Network_SSDP.py  MK_Common_Network_Trakt.py  MK_Common_Network_Twitch.py  MK_Common_Network_Youtube.py  MK_Common_Radio.py  MK_Common_Schedules_Direct.py  (+179 more)
conf/: .gitignore  kivy_config.ini
database/: __init__.py  db_base.py  db_base_activity.py  db_base_audit.py  db_base_brainz.py  db_base_channel.py  db_base_collection.py  db_base_cron.py  db_base_device.py  db_base_download.py  db_base_download_images.py  db_base_extensions.py  db_base_iradio.py  db_base_kodi.py  db_base_link.py  db_base_media.py  db_base_media_books.py  db_base_media_class.py  db_base_media_games.py  db_base_media_images.py  db_base_media_movie.py  db_base_media_music.py  db_base_media_music_video.py  db_base_media_remote.py  db_base_media_tv.py  db_base_metadata.py  db_base_metadata_anime.py  db_base_metadata_book.py  db_base_metadata_game_systems.py  db_base_metadata_games.py  db_base_metadata_gamesdb.py  db_base_metadata_movie.py  db_base_metadata_music.py  db_base_metadata_music_video.py  db_base_metadata_people.py  db_base_metadata_sports.py  db_base_metadata_thesportsdb.py  db_base_metadata_thetvdb.py  db_base_metadata_tv.py  db_base_metadata_tvmaze.py  (+15 more)
device_json/: Base_Device_Json.txt  Epson_Projector_Json.txt  commands_to_add.txt
docker/: mediakraken.tar  mediakraken_dev_0_2_1.tar  mediakraken_local.tar  pipeline-build-docker-install.txt  purge_containers.sh
docker/alpine/ComposeMediaKrakenCronRust/: .gitignore  Cargo.toml  Dockerfile
docker/alpine/ComposeMediaKrakenCronRust/src/: main.rs
docker/alpine/ComposeMediaKrakenWebActixWebRust/: Cargo.toml
docker/core/download_server/: Cargo.toml
docker/core/download_server/src/: main.rs
docker/core/file_system_media_scanner/: Cargo.toml  Dockerfile
docker/core/file_system_media_scanner/src/: main.rs
docker/core/game_metadata_mame/: Cargo.toml
docker/core/game_metadata_mame/src/: main.rs
docker/rust/ComposeMediaKrakenInotifyRust/: Cargo.toml
docker/rust/ComposeMediaKrakenInotifyRust/src/: main.rs
docker/rust/ComposeMediaKrakenTESTReqwestRust/: .gitignore  Cargo.toml  Dockerfile
docker/rust/ComposeMediaKrakenTESTReqwestRust/src/: main.rs
docker/rust/ComposeMediaKrakenWebActixWebRust/: Cargo.toml
docker/rust/ComposeMediaKrakenWebActixWebRust/src/: main.rs
docs/: .gitignore  Build_Environment.txt  MK_Benchmark.txt  MK_Build.txt  MK_Build_Stack.txt  MK_Development.txt  MK_Docker.txt  MK_Image_Locations.txt  MK_Images.txt  MK_MediaKraken.html  MK_Pika_Testing.txt  MK_Ports.txt  MK_Validation.txt  MK_Workflow.txt  MediaKraken_Docker_Use.txt  Media_Match_File_Scan.dia  Media_Metadata_Identification.dia  Media_Metadata_Match.dia  Media_Metadata_Match_TV.dia  OVA_Create.txt  cast_test.txt  celery.txt  com_layout.txt  elec_build.txt  elk.txt  ffmpeg_notes  ffmpeg_test.txt  hdhomerun.txt  kivy_crochet.txt  kodi.txt  lirc.txt  pi_controller.txt  push_release.txt  ripper.txt  roku.txt  swarm  theater_ubuntu_build.txt  twisted_json.txt  ume.txt  vid_accelration.txt
jenkins_scripts/: .build_update.bat.un~  .env  .source_sync.sh.un~  build_update.bat  build_update.sh  build_update_local.sh  build_update_proxy.sh  css-html-js-minify.py  images_push_to_hub.sh  minify-web-scripts.sh  source_sync.bat  source_sync.sh  source_sync.sh~  tag_rename_images.sh
key/: .gitignore  openssl.cfg
kivy_test/: chat_client.py  chat_client_kivy.py  kivy_client.py  kivy_client_crochet.py  (+4 more)
source_rust/bulk_themoviedb_netfetch/: Cargo.toml
source_rust/bulk_themoviedb_netfetch/src/: main.rs
source_rust/mk_lib_database/: Cargo.toml
source_rust/mk_lib_database/src/: lib.rs  mk_lib_database.rs  mk_lib_database_cron.rs  mk_lib_database_download.rs  mk_lib_database_library.rs  mk_lib_database_media.rs  mk_lib_database_metadata.rs  mk_lib_database_notification.rs  mk_lib_database_user.rs  mk_lib_database_version.rs
source_rust/theater/: Cargo.toml
(+4172 files in other folders)
