[package]
name = "mk_lib_database"
version = "0.0.1"
edition = "2018"

[profile.release]
panic = 'abort'

[dependencies]
serde_json = "1.0.64"
tokio = { version = "1.6.0", features = ["full"] }
tokio-postgres = { version = "0.7.2", features = ["with-serde_json-1"] }

[dev-dependencies]
tokio-test = "*"