[package]
name = "myapp"
version = "0.0.1"
edition = "2018"

[profile.release]
panic = 'abort'

[dependencies]
glib = { git = "https://github.com/gtk-rs/gtk-rs-core.git", package = "glib" }
gtk = { git = "https://github.com/gtk-rs/gtk4-rs.git", package = "gtk4" }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.6.0", features = ["full"] }

[dev-dependencies]
tokio-test = "*"