[package]
name = "myapp"
version = "0.0.1"
edition = "2018"

[profile.release]
panic = 'abort'

[dependencies]
amiquip = { version = "0.4", default-features = false }
chrono = "0.4"
reqwest = { version = "0.11.3", features = ["json"] }
serde_json = "1.0.64"
tokio = { version = "1.6.0", features = ["full"] }
tokio-postgres = { version = "0.7.2", features = ["with-serde_json-1"] }