[package]
name = "myapp"
version = "0.0.1"
edition = "2018"

[dependencies]
# sessions for actix
actix-session = "0.4.1"
# actix web 'framework'
actix-web = "3.3.2"
# rabbitmq
amiquip = { version = "0.4", default-features = false }
# docker interface
shiplift = "0.7"
# template based off jinja
tera = "1.10.0"
tokio = { version = "1.6.0", features = ["full"] }
tokio-postgres = { version = "0.7.2", features = ["with-serde_json-1"] }