[package]
name = "myapp"
version = "0.0.1"
edition = "2018"

[profile.release]
panic = 'abort'

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.6.0", features = ["full"] }
tokio-postgres = { version = "0.7.2", features = ["with-serde_json-1", "with-uuid-0_8"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }

[dev-dependencies]
tokio-test = "*"