[package]
name = "myapp"
version = "0.0.1"
edition = "2018"

[profile.release]
panic = 'abort'

[dependencies]
async-std = "1.9.0"
chrono = "0.4"
flate2 = "1.0.20"
reqwest = { version = "0.11.3", default-features = false, features = ["json", "rustls-tls"] }
rustls = "0.19.1"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
sys-info = "0.4.0"
tokio = { version = "1.6.0", features = ["full"] }
tokio-postgres = { version = "0.7.2", features = ["with-serde_json-1", "with-chrono-0_4"] }
xmlparser = "0.13.3"

[dev-dependencies]
tokio-test = "*"