[package]
name = "myapp"
version = "0.0.1"
edition = "2018"

[profile.release]
panic = 'abort'

[dependencies]
chrono = "0.4"
inotify = "0.9.3"
tokio = { version = "1.6.0", features = ["full"] }
tokio-postgres = { version = "0.7.2", features = ["with-uuid-0_8"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }

[dev-dependencies]
tokio-test = "*"