[package]
name = "myapp"
version = "0.0.1"
edition = "2018"

[profile.release]
panic = 'abort'

[dependencies]
flate2 = "1.0.20"
reqwest = { version = "0.11.3", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.6.0", features = ["full"] }

[dev-dependencies]
tokio-test = "*"