[package]
name = "myapp"
version = "0.0.1"
edition = "2018"

[profile.release]
panic = 'abort'

[dependencies]
actix-session = "0.4.1"
actix-web = "3.3.2"
actix-web-grants = "2.0.1"
amiquip = { version = "0.4", default-features = false }
shiplift = { version = "0.7", default-features = false, features = ["unix-socket"] }
tera = "1.10.0"
tokio = { version = "1.6.0", features = ["full"] }
tokio-postgres = { version = "0.7.2", features = ["with-serde_json-1"] }

[dev-dependencies]
tokio-test = "*"